# enterprise-incident-ai-copilot

./: .gitignore  README.md  pyproject.toml
docs/troubleshooting/: bedrock-runtime-access.md
infra/environments/dev/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/api_gateway/: main.tf  outputs.tf  variables.tf
infra/modules/dynamodb/: main.tf  outputs.tf
infra/modules/iam/: main.tf  (+2 more)
sample_data/deployments/: payments-api.json
sample_data/incidents/: inc-1001.json
sample_data/knowledge_base/: payments-api-known-issues.md
sample_data/metrics/: payments-api.json
sample_data/runbooks/: payments-api-latency.md
sample_data/service_catalog/: payments-api.json
services/agents/: coordinator.py
services/ai_gateway/: main.py
services/llm/: bedrock_client.py  investigation_agent.py  mock_bedrock_client.py
services/mcp_tools/: deployment_tool.py  incident_tool.py  knowledge_tool.py  metrics_tool.py  ownership_tool.py  runbook_tool.py
services/models/: evidence.py  incident.py  investigation.py  prompt_context.py
services/observability/: cloudwatch_publisher.py  metrics.py
services/prompts/: coordinator_prompt.txt  prompt_builder.py
services/rag/: chunker.py  embeddings.py  rag_service.py  retrieval.py  vector_store.py
services/workflows/: investigation_workflow.py
tests/: test_bedrock.py  test_bedrock_client.py  test_deployment_tool.py  test_incident_tool.py  test_investigation_agent.py  test_metrics_tool.py  test_ownership_tool.py  test_prompt_builder.py  test_runbook_tool.py
(+14 files in other folders)
